--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -25,14 +25,8 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
           ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
-
-          sudo su
-
-          cd Domido-Backend
-
-          git pull origin simulation-sync-and-restrict
-
-          npm install --production
-          pm2 restart all
-
+            cd ~/Domido-Backend
+            git pull origin simulation-sync-and-restrict
+            npm install --production
+            pm2 restart all
           EOF
