--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -2,33 +2,35 @@ name: Deploy Backend to EC2
 
 on:
   push:
-    branches:
-      - test/cicd
+    branches: [test/cicd]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup SSH Key
+      - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+
+      - name: Add EC2 host key to known_hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2
         env:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
-          ssh -o StrictHostKeyChecking=no -t $EC2_USER@$EC2_HOST << 'EOF'
-            git config --global --add safe.directory /home/$EC2_USER/Domido-Backend
-            source ~/.bashrc
-
+          ssh "$EC2_USER@$EC2_HOST" << 'EOF'
             cd ~/Domido-Backend
+            git config --global --add safe.directory "$(pwd)"
             git pull origin simulation-sync-and-restrict
-            npm install --production
-            pm2 restart all || pm2 start index.js
+            npm ci --omit=dev
+            pm2 restart all || pm2 start index.js --name domido-backend
           EOF
