--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -23,4 +23,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -t "$EC2_USER@$EC2_HOST" << 'EOF'
             cd ~/Domido-Backend
+            git pull origin simulation-sync-and-restrict
+          
           EOF
