--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -29,4 +29,5 @@ jobs:
             git status
             git fetch origin
             git pull origin feat/simulation-sync-and-restrict
+            pm2 restart all || pm2 start index.js
           EOF
