--- a/.github/workflows/backend-deploy.yaml
+++ b/.github/workflows/backend-deploy.yaml
@@ -16,22 +16,28 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Deploy to EC2
+      - name: Install Node.js and Deploy to EC2
         env:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
           ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
             
+            sudo apt update
+            
+            curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            
+            sudo npm install -g pm2
+            
             sudo chown -R ubuntu:ubuntu ~/Domido-Backend
-
+            
             cd ~/Domido-Backend
-            git status
+            
             git fetch origin
             git pull origin feat/simulation-sync-and-restrict
             
             npm install
-            npm install -g pm2
             
             pm2 restart all || pm2 start index.js
           EOF
