--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/node": "^24.0.3",
     "eslint": "^9.28.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
@@ -26,7 +27,10 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
