--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "tsx watch index.ts",
+    "start": "tsx index.ts"
   },
   "lint-staged": {
     "**/*.js": [
@@ -19,6 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
     "eslint": "^9.28.0",
     "eslint-import-resolver-alias": "^1.1.2",
