Refactor: ts 마이그레이션에 따라 워크플로우 변경

--- a/.github/workflows/backend_deploy.yaml
+++ b/.github/workflows/backend_deploy.yaml
@@ -39,6 +39,12 @@ jobs:
             
             npm install
             
-            pm2 restart all
+            if pm2 list | grep -q domido-backend; then
+              pm2 restart domido-backend
+            else
+              pm2 start npm --name domido-backend -- start
+            fi
+
+            pm2 save
           EOF
           
